--- a/index.html
+++ b/index.html
@@ -71,28 +71,32 @@ a:hover {
 <p>Planinskih/outdoor/aktivnih aplikacij je danes malo morje zato je odločitev o izbiri kar težka. Spodnji zapis je nastal na podlagi izkušenj zadnjega desetletja, predvsem z namenom gledanja karte, kartiranja nekaj sto lokacij sredi ničesar in uporabe lastnih zemljevidov v času, ko aplikacije še niso bile tako razvite kot danes.<br>
 <br>
 
-<h3>Sledi markaciji, če jih ni se vrni nazaj?</h3>
-<p>Niso vse poti markirane planinske poti in seveda - niso vse aktivnosti planinske. Veliko vrhov nima markiranih planinskih poti, čeprav poti, možici ali celo grajene 2m široke mulatjere s predori obstajajo. Nekaj popularnih primerov - Veliki Draški vrh, Krnčica, Zadnjiški Ozebnik, Grušnica, ... Včasih gremo tudi kam drugam kot na vrh in karta pride zelo prav na izletu okrog Snežnika, po Krasu ali npr. po Juliani. Kaj je prednost digitalne pred papirnato? Zoom, zoom, zoom. Večinoma so podatki zajeti v merilu 1:1000, na papirju pa v najboljšem primeru 1:25.000 in zavita pot tako hitro postane ravna črta. Seveda nam GPS na papirju ne kaže lokacije in ni ga junaka, ki bo v megli sredi gozda na Javornikih jamčil na papirju za lastno lokacijo. Nesreča ne počiva in takrat je lepo biti založen z vsem. Tudi s toplimi oblačili. Predvsem pa: karta je zgolj pripomoček, aplikacija še toliko bolj. Oči na pot, ne v zaslon.</p>
+<h3>Zakaj aplikacija in ne papirnata planinska karta?</h3>
+<p>Niso vse poti markirane planinske poti in seveda - niso vse aktivnosti planinske. Veliko vrhov nima markiranih planinskih poti, čeprav poti, možici ali celo grajene 2m široke mulatjere s predori obstajajo. Včasih gremo tudi kam drugam kot na vrh in karta pride zelo prav na izletu okrog Snežnika, po Krasu ali npr. po Juliani. Kaj je prednost digitalne pred papirnato? Zoom, zoom, zoom. Večinoma so podatki zajeti v merilu 1:1000 in ne 25.000 ali celo 50.000 kot na papirju. GPS na papirju ne kaže lokacije in ni ga junaka, ki bo v megli sredi gozda na Javornikih jamčil na papirju za točnost lokacije. Nesreča ne počiva in takrat je lepo biti založen z vsem. Predvsem pa: karta je zgolj pripomoček, aplikacija še toliko bolj. Oči na pot, ne v zaslon.</p>
 
 <h3>PZS in ostali viri podatkov</h3>
 <p>Planinska zveza Slovenije pri nas vodi evidenco <b>uradnih</b> planinskih poti ter prodaja papirnate in digitalne planinske zemljevide. V digitalni sferi so njihovi izdelki najbolje integrirani v aplikaciji Locus in Avenza.</p>
 <p>Seveda je virov kartografskih podlag več, ena izmed takšnih baz je OpenStreetMap, ki je zaradi načela odprokodnosti in odprtih podatkov dostopen vsem - zastonj. Ravno zaradi tega je osnovni vir praktično vseh, plačljivih in brezplačnih aplikacij. OSM urejajo posamezniki. Več prostovoljcev > <b>boljši bodo podatki v vseh aplikacijah.</b> Prednost vektorskih zbirk pred klasični kartografskimi rastrskimi produkti (npr PZS karte) je posodabljanje. Stroški revizije zemljevida in ponovne izdelave so neprimerno večji in zato se nove verzije izdelajo na več let. V OSM so na voljo čez nekaj ur, a brez uredniške revizije.</p> 
 
-<p>Velika večina aplikacij nudi enake reči in so razlike predvsem v uporabniški izkušnji ter državi, ki jih aplikacija "favorizira" z vsebino. Nove aplikacije želijo uporabnike pritegniti predvsem z načrtovanjem, iskanjem tur, nekaj v smislu "prodajaj aktivni življenski slog, ne kartografske aplikacije"...skratka piko na i, ki jo seveda računajo, saj vse te funkcionalnosti zahtevajo strežniško infrastrukturo in vojsko razvijalcev. Zaradi lažje primerjave se bomo osredotočili predvsem na to, kar (zelo subjektivno) pomeni največ - karta, orodja, ki olajšajo naše odločitve ter potešijo radovednost oddaljenosti do naslednje točke. Osnovna raba aplikacije je predvsem prikaz položaja.
-<br>
-Še en nasvet - sam ne beležim prehojene poti/aktivnosti z aplikacijo. Baterija je v gorskem svetu preveč dragocena in powerbank v nahrbtniku (poleg papirnate karte) je le rezerva. Če beležim sled je to naloga pametne ure.</p>
+<p>Velika večina aplikacij nudi enake reči in so razlike predvsem v uporabniški izkušnji ter državi, ki jih aplikacija "favorizira" z vsebino. Nove aplikacije želijo uporabnike pritegniti predvsem z načrtovanjem, iskanjem tur, nekaj v smislu "prodajaj aktivni življenski slog, ne kartografske aplikacije"...skratka piko na i, ki jo seveda računajo, saj vse te funkcionalnosti zahtevajo strežniško infrastrukturo in vojsko razvijalcev.</p> 
 <img src="slike\outdoorkarta.jpg" height="600">
 <p>Primer obljube: Outdooractive oglašuje, da v PRO naročnini dobite tudi dostop do njihove Outdooractive karte. Vse lepo in prav ampak Slovenije ni v tej zbirki. Na območju naše države je prikazan brezplačen OpenStreetMap.</p>
+
+
+<p>Zaradi lažje primerjave se bomo osredotočili predvsem na to, kar (zelo subjektivno) pomeni največ - karta, orodja, ki olajšajo naše odločitve ter potešijo radovednost koliko smo oddaljeni do naslednje točke. 
+<br>
+Še en nasvet - sam ne beležim prehojene poti/aktivnosti s telefonom. Baterija je v gorskem svetu preveč dragocena in powerbank v nahrbtniku (poleg papirnate karte) je le rezerva. Alternativa je pametna ura.</p>
+
 <h1 align="center">OruxMaps, Locus, Avenza in Cartograph 2 maps</h1>
 <h3>Orux</h3>
 <p>OruxMaps je že desetletje švicarski nož kartografije za Android naprave in je oral ledino večine funkcionalnosti, ki jih imajo tudi "veliki" ponudniki (v času, ko sploh še niso obstajali). Je popolnoma prilagodljiv tako za pohodnike kot kolesarje ter tudi za delovne naloge. Ena izmed njegovih prednosti je plošča na kateri sami izberemo koliko meritev/podatkov želimo videti. Orux nima trgovine kart za "one-click-purchase", vanj lahko uvozimo karkoli želimo. S prenosom višinskih podatkov lahko vsak zemljevid prikažemo v 3D, iščemo po vsebini zemljevida, uvažamo točke, ustvarjamo virtualne prostorske ograje, menjamo simbologijo iz pohodništva v kolesarjenje, itd. Nudi tudi odčitavanje koordinat v različnih zapisih za vse, ki imamo raje metrični sistem namesto stopinj. <br>
-Skratka...Ni potrebna registracija, ne naročnina, nima trgovin, galerij, zbirk, zbiranja podatkov, reklam, itd. Je zgolj in le kartografska aplikacija.
+Skratka...Ni potrebna registracija, ne naročnina, nima trgovin, galerij, zbirk, zbiranja podatkov, reklam, celo lastnih kart, itd. Je zgolj in le kartografska aplikacija.
 </p>
 <img src="slike\azimut.jpg" height="600">
 <h5 >Predvsem pa nudi najbolj pomembno - prikaz lokacije in hitro analizo oddaljenosti in azimuta do željene točke. Brez navigacije in klikanja, zgolj s premikom karte izvemo razdaljo od stojišča pri Koči pri Krnskih jezerih do izbrane lokacije - 830m in smer 339 stopinj. Meni najljubša funkcija v zelo slabem vremenu, ponoči ali v 99% primerih zgolj preverjanje razdalje do naslednjega razpotja. Smer in razdalja kjerkoli.</h5>
 
 <img src="slike\navigacija.jpg" height="600">
-<p>Locus (levo) uporablja lastno bazo za navigacijo in izračun poti, Orux zunanje ponudnike (graphhoper). Razlika? Locus (brezplačna verzija) potrebuje prenos podatkov, znotraj Oruxa z enim klikom prenesemo celotno bazo Graphhoperja (vir OSM) za Slovenijo in mobilni podatki niso potrebni. Prazen prostor na dnu Locusa je prostor, ki ga zasedajo reklame.</p>
+<p>Še en primer funkcionalnosti - izračun poti. Locus (levo) uporablja lastno bazo za navigacijo in izračun poti, Orux zunanje ponudnike (graphhoper). Razlika? Locus potrebuje prenos podatkov, znotraj Oruxa z enim klikom prenesemo celotno bazo Graphhoperja (vir OSM) za Slovenijo in mobilni podatki niso potrebni. Prazen prostor na dnu Locusa je prostor, ki ga zasedajo reklame.</p>
 <br>
 
 <h3>Locus</h3>
@@ -101,7 +105,7 @@ Skratka...Ni potrebna registracija, ne naročnina, nima trgovin, galerij, zbirk,
 <p>Trgovina Locus in PZS produkti.</p>
 <br>
 <h3><a href="https://www.avenzamaps.com/">Avenza</a></b></h3>
-<p>je dokaj specifičen ponudnik, saj podpira le PDF format kart visoke kakovosti. Njihova trgovina je polna različnih vsebin - od zgodovinskih do tematskih kart. V njej je mogoče kupiti tako PZS karte kot Kartografije in Geodetskega inštituta Slovenije. Ker niso vse poti planinske, so zemljevidi teh dveh proizvajalcev zelo priročni - a na žalost nista na razpolago v Locus trgovini. Slabost Avenze? Če v trgovini ni karte vašega območja ste brez karte. Vektorske karte imajo številne prednosti (iskanje po vsebini karte, prilagajanje izgleda, ...) in škoda, da jih Avenza ne podpira.</p>
+<p>je dokaj specifičen ponudnik, saj podpira le PDF format kart visoke kakovosti. Njihova trgovina je polna različnih vsebin. V njej je mogoče kupiti tako PZS kot karte Kartografije in Geodetskega inštituta Slovenije. Ker niso vse poti planinske, so zemljevidi teh dveh proizvajalcev zelo priročni - a na žalost niso na razpolago v Locus trgovini. Slabost Avenze? Če v trgovini ni karte vašega območja ste brez karte.</p>
 
 <h3>Apple IOS?</h3>
 <p>Dober nadomestek aplikacije OruxMaps je Cartograph 2 maps <a href="https://apps.apple.com/us/app/cartograph-2-maps/id1082995961"> Link </a>. Tudi vanjo lahko nameščamo mbtiles zemljevide po enakem postopku. Locus ni na voljo za IOS. </p>
@@ -120,7 +124,7 @@ Ročna namestitev datotek potrebuje ustrezno dovoljenje. Za Android verzije od 8
 Korak 3: Ga ni. Orux je nameščen.</p>
 
 <h2>Namestitev kartografske podlage</h2>
-<p>Orux privzeto nima nameščene nobene karte in za prikaz uporablja spletni vir OpenStreetMap. Cilj tega "priročnika" je namestitev zemljevidov projekta OpenAndroMaps. Postopek je enak za Locus in Orux. OpenAndroMaps ni edini ponudnik - obstaja tudi OpenMaps.eu, ki ima zopet svojo simbologijo ampak z vidika posodobitve kart ste na slabšem. Slabost obeh? Odvisni ste od dobre volje prostovljcev. Alternativa? Plačljivi ponudniki. Zahtevnost postopka? 1 klik v brskalniku in 1 klik v aplikaciji.</p>
+<p>Orux privzeto nima nameščene nobene karte in za prikaz uporablja spletni vir OpenStreetMap. Cilj tega "priročnika" je namestitev zemljevidov projekta OpenAndroMaps. Postopek je enak za Locus in Orux. OpenAndroMaps ni edini ponudnik - obstaja tudi OpenMaps.eu, ki ima zopet svojo simbologijo ampak z vidika posodobitve kart ste na slabšem. Slabost obeh? Odvisni ste od dobre volje prostovljcev. Alternativa? Plačljivi ponudniki. Zahtevnost postopka? 1 klik v brskalniku.</p>
 
 <p>Imejte aktivno wifi povezavo zaradi zahtev OruxMaps aplikacije ter odprite spletno stran <a href="https://www.openandromaps.org/en/downloads/europe">OpenAndroMaps</a> in kliknite "+" pred Slovenia inc. Istria. Iz seznama izberite Install in Orux/Locus.  </p>
 <img src="slike\andro.jpg" height="600">
@@ -171,7 +175,7 @@ Več o uporabljeni simbologiji Elevate 4 je dosegljivo v <a href="https://www.op
 <br>
 <h1>Primerjava</h1>
 <h3>maPZS</h3>
-<p>PZS poleg kart nudi tudi spletni pregledovalnik, ki ga lahko shranimo na telefon ter prenašamo zemljevide brez povezave. Podlaga je skromnejša (ter derivat OSM), sloj planinskih poti je mestoma zelo skromen v natančnosti.</p>
+<p>PZS poleg kart nudi tudi spletni pregledovalnik, ki ga lahko shranimo na telefon ter prenašamo zemljevide brez povezave. Podlaga je skromnejša (ter derivat OSM), sloj planinskih poti je mestoma zelo splošen.</p>
 <img src="slike\mapzs.jpg" height="600">
 
 <h3>Maps.me</h3>
@@ -189,14 +193,15 @@ Več o uporabljeni simbologiji Elevate 4 je dosegljivo v <a href="https://www.op
 
 
 <h3>Outdooractive, Bergfex, Komoot,...</h3>
-<p>Kaj pa Outdooractive in ostali načrtovalniki? Trenutno je verjetno najbolj priročna plačljiva aplikacija za načrtovanje aktivnosti (30€ na leto je nuja za offline zemljevide). Njihova karta je derivat iz OpenStreetMap podatkov, kar pomeni, da imamo v Oruxu iste podatke - zastonj. Njihov plan temelji na načrtovanju (višinski profili, izračun poti med točko A in B), itd. Za 60€ letno vam nudijo še dostop do kart planinskih organizacij OAV, DAV, KOMPASS, ADFC, Harvey ampak ne PZS. Že ime Bergfex karte "Bergfex OSM" pove, da gre za isto stvar kot v oruxu/locusu. Bergfex v zastonjski različici prikazuje tudi topografske karte Avstrije ter nudi prenos izbranih območij. Seveda je paradni konj vseh aplikacij njihova galerija izletov in tur. Outdooractive nudi tudi prepoznavanje vrhov.</p>
+<p>Kaj pa Outdooractive in ostali načrtovalniki? Trenutno je verjetno najbolj priročna plačljiva aplikacija za načrtovanje aktivnosti (30€ na leto je nuja za offline zemljevide). Njihova karta je derivat iz OpenStreetMap podatkov, kar pomeni, da imamo v Oruxu iste podatke - zastonj. Njihov plan temelji na načrtovanju (višinski profili, izračun poti med točko A in B), itd. Za 60€ letno vam nudijo še dostop do kart planinskih organizacij OAV, DAV, KOMPASS, ADFC, Harvey ampak ne PZS. Bergfex? Že ime Bergfex karte "Bergfex OSM" pove, da gre za isto stvar kot v oruxu/locusu. Bergfex v zastonjski različici prikazuje tudi topografske karte Avstrije ter nudi prenos izbranih območij. 
+Seveda je paradni konj vseh aplikacij njihova galerija izletov in tur. </p>
 
 <img src="slike\outdoor1.jpg" height="600">
 
-<p>Outdooractive in podobni so z leti res dobro razvili sistem načrtovanja aktivnosti. Da se razume - so odlične aplikacije in preproste za uporabo ter dokaz, da so osnova digitalne revolucije podatki. Milijonskih vložkov ne moremo primerjati s hobi projektom enega razvijalca. Vsi uporabljajo isti vir ter izkušnjo gradijo na drugih funkcionalnostih. S kartografskega vidika so jim ostale aplikacije povsem konkurenčne.</p>
+<p>Outdooractive in podobni so z leti res dobro razvili sistem načrtovanja aktivnosti. Da se razume - so odlične aplikacije in preproste za uporabo ter dokaz, da so osnova digitalne revolucije podatki. Vsi uporabljajo isti vir ter izkušnjo gradijo na drugih funkcionalnostih. S kartografskega vidika so jim ostale aplikacije povsem konkurenčne.</p>
 <img src="slike\bergfex.jpg" height="600">
 
-<p>"Težava" teh aplikacij je globalno ali regionalno tržišče - opisov v slovenščini je malo. Nizozemec, ki je prispeval svojo turo v aplikacijo je opis napisal v svojem jeziku, lokalne turistične organizacije praviloma pišejo v angleščini ali celo nemščini.</p>
+<p>"Težava" teh aplikacij je globalno ali regionalno tržišče - opisov v slovenščini je malo. Nizozemec, ki je prispeval svojo turo v aplikacijo je opis napisal v svojem jeziku, lokalne turistične organizacije praviloma pišejo v angleščini ali nemščini.</p>
 
 <h3>Načrtovanje doma</h3>
 <p>Načrtovanje ture praviloma naredimo doma - brez težav lahko uporabimo spletni portal Outdooractive, analiziramo in načrtujemo pot, vidimo višinski profil poti, ... prav tako lahko brezplačno pregledujemo ture v zgoraj omenjenih aplikacijah. </p>
@@ -209,18 +214,18 @@ Več o uporabljeni simbologiji Elevate 4 je dosegljivo v <a href="https://www.op
 <p>Kot vedno je odločitev lažja, če ji pripišemo cenik. Vse tri vam bodo enako kvalitetno služile pri orientaciji v naravi, pričakovano bo najdražja imela še tisti ekstra fancy dodatek brez katerega lahko brez težav živimo.</p>
 
 <h3>Popolnoma brezplačno</h3>
-<p>Orux. Brez konkurence. V primeru, da želite kartirati, ga uporabljati za službene naloge, vanj umestiti lastne karte, prikazovati SHP, imeti spletne karte WMS, itd...Kot rečeno. Brez konkurence.</p>
+<p>Orux. Brez konkurence. V primeru, da želite zgolj prikaz lokacije, ga uporabljati za službene naloge, vanj umestiti lastne karte, prikazovati SHP, imeti spletne karte WMS, itd...Kot rečeno. Brez konkurence.</p>
 
 <h3>Enkratni nakup</h3>
 <p>Locus. Zaradi trgovine kart. Mogoče celo Avenza (sploh, če imate IOS) vendar ne podpira vektorskih kart. Če tolerirate reklame in uporabljate OpenAndroMaps karte potem je tudi Locus brezplačen. </p>
 
 <h3>Mesečna naročnina</h3>
-<p>Outdooractive. Zakaj ne Bergfex? Ker je vsebinsko (kartografsko) narejen za Avstrijo. Outdooractive dobite za 30€ letno in imate čudovit načrtovalnik poti. Nimate pa svobode dodajanja lastnih kart ampak roko na srce - za naročnino pričakujem tudi storitev.</p>
+<p>Outdooractive. Zakaj ne Bergfex? Ker je vsebinsko (kartografsko) narejen za Avstrijo. Outdooractive dobite za 30€ letno in imate čudovit načrtovalnik poti. Nimate pa svobode dodajanja lastnih kart ampak roko na srce - za naročnino se pričakuje tudi "out-of-the-box" rešitev.</p>
 
-<p>Sam imam v lasti tako Locus kot Outdooractive ter uživam v obeh. P.S. na terenu je 99,9% časa v uporabi Orux.</p>
+<p>Sam imam v lasti Orux, Locus (s PZS kartami) in Outdooractive, ker so mi vse tri aplikacije všeč. Ni boljšega kot iskanje novih idej in ogled vseh lastnosti poti na enem mestu. No, obstajajo tudi tiskani vodniki, ki so še vedno čudovito darilo. P.S. na terenu je 99,9% časa v uporabi Orux.</p>
 
 <h1>Imena vrhov?</h1>
-<p>Meni najljubša je (plačljiva) Peak finder aplikacija. <a href="https://www.peakfinder.org/en/mobile">LINK</a></p>
+<p>Najljubša je (plačljiva) aplikacija Peak finder <a href="https://www.peakfinder.org/en/mobile">LINK</a>. Sicer tudi Outdooractive nudi enako funkcijo prepoznavanje vrhov.</p>
 <img src="slike\peakfinder.jpg" height="600">
 
 
