--- a/index.html
+++ b/index.html
@@ -110,7 +110,61 @@ Skratka...Ni potrebna registracija, ne naročnina, nima trgovin, galerij, zbirk,
 <h3>Apple IOS?</h3>
 <p>Dober nadomestek aplikacije OruxMaps je Cartograph 2 maps <a href="https://apps.apple.com/us/app/cartograph-2-maps/id1082995961"> Link </a>. Tudi vanjo lahko nameščamo mbtiles zemljevide po enakem postopku. Locus ni na voljo za IOS. </p>
 
-<h2>Namestitev OruxMaps/Locus</h2>
+<h3>Outdooractive, Bergfex, Komoot,...</h3>
+<p>Kaj pa Outdooractive in ostali načrtovalniki? Trenutno je verjetno najbolj priročna plačljiva aplikacija za načrtovanje aktivnosti (30€ na leto je nuja za offline zemljevide). Njihova karta je derivat iz OpenStreetMap podatkov, kar pomeni, da imamo v Oruxu iste podatke - zastonj. Njihov plan temelji na načrtovanju (višinski profili, izračun poti med točko A in B), itd. Za 60€ letno vam nudijo še dostop do kart planinskih organizacij OAV, DAV, KOMPASS, ADFC, Harvey ampak ne PZS. Bergfex? Že ime Bergfex karte "Bergfex OSM" pove, da gre za isto stvar kot v oruxu/locusu. Bergfex v zastonjski različici prikazuje tudi topografske karte Avstrije ter nudi prenos izbranih območij. 
+Seveda je paradni konj vseh aplikacij njihova galerija izletov in tur. </p>
+
+<img src="slike\outdoor1.jpg" height="600">
+
+<p>Outdooractive in podobni so z leti res dobro razvili sistem načrtovanja aktivnosti in razne drobnarije. Da se razume - so odlične aplikacije in preproste za uporabo ter dokaz, da so osnova digitalne revolucije podatki. Vsi uporabljajo isti vir ter izkušnjo gradijo na drugih funkcionalnostih. Ena izmed boljših funkcionalnosti je hitro kopiranje koordinat ali uvedba <a href="https://what3words.com/how-to">w3w sistema</a> hitrega sporočanja lokacije (rabi prenos podatkov).</p>
+<img src="slike\bergfex.jpg" height="600">
+
+<p>"Težava" teh aplikacij je globalno ali regionalno tržišče - opisov v slovenščini je malo. Nizozemec, ki je prispeval svojo turo v aplikacijo je opis napisal v svojem jeziku, lokalne turistične organizacije praviloma pišejo v angleščini ali nemščini.</p>
+<br>
+
+<br>
+<h2>Še nekaj ostalih...</h2>
+<h3>maPZS</h3>
+<p>PZS poleg kart nudi tudi spletni pregledovalnik, ki ga lahko shranimo na telefon ter prenašamo zemljevide brez povezave. Podlaga je skromnejša (ter derivat OSM), sloj planinskih poti je mestoma zelo splošen.</p>
+<img src="slike\mapzs.jpg" height="600">
+
+<h3>Maps.me</h3>
+<p>Še en derivat OpenStreetMap. Hiter in enostaven, resnično škoda, da vse poti prikazuje enako. Na sliki so mulatjera Zadnjica - Luknja, zahtevna pot preko Plemenic in ozka pot na Bovški Gamsovec.</p>
+<img src="slike\mapsme.jpg" height="600">
+
+<h3>Mapy.cz</h3>
+<p>Še en derivat OpenStreetMap. Hiter in enostaven, kategorizacija določenih poti ter nabor izletov in točk. Nima možnosti dodajanja kart.</p>
+<img src="slike\mapy.jpg" height="600">
+
+<h3>Tabacco</h3>
+
+<p>Ena izmed redkih kartografskih hiš z lastno aplikacijo za nakup in uporabo zgolj njihovih digitalnih kart. Za razliko od PZS prodajajo kvadrante.</p>
+<img src="slike\tabacco.jpg" height="600">
+
+
+<h3>Načrtovanje doma</h3>
+<p>Načrtovanje ture praviloma naredimo doma - brez težav lahko uporabimo spletni portal Outdooractive, analiziramo in načrtujemo pot, vidimo višinski profil poti, ... prav tako lahko brezplačno pregledujemo ture v zgoraj omenjenih aplikacijah. </p>
+<img src="slike\outdoor.jpg" height="600">
+<p>Višinski profil poti prikazuje tudi podatek o podlagi - ali je steza, pot, tlakovana, itd...vir vseh teh atributov je vestno delo tisočih prostovoljev, ki urejajo OSM.</p>
+<br>
+<p>Velika prednost Slovenije je spletna stran Hribi.net, kjer brezplačno domujejo opisi poti, slike in trase. Sicer ni vsega in se zdi, da je stran včasih zamrla ampak po popularnosti so med slovenskimi planinci verjetno na prvem mestu. Samostojno imamo tako na razpolago razmeroma bogato zbirko informacij brez, da bi se rabili <b>zavezati določeni aplikaciji.</b></p>
+
+<h1>Končna odločitev?</h1>
+<p>Kot vedno je odločitev lažja, če ji pripišemo cenik. Vse tri vam bodo enako kvalitetno služile pri orientaciji v naravi, pričakovano bo najdražja imela še tisti ekstra fancy dodatek brez katerega lahko brez težav živimo.</p>
+
+<h3>Popolnoma brezplačno</h3>
+<p>Orux. Brez konkurence. V primeru, da želite zgolj prikaz lokacije, ga uporabljati za službene naloge, vanj umestiti lastne karte, prikazovati SHP, imeti spletne karte WMS, itd...Kot rečeno. Brez konkurence.</p>
+
+<h3>Enkratni nakup</h3>
+<p>Locus. Zaradi trgovine kart. Mogoče celo Avenza (sploh, če imate IOS) vendar ne podpira vektorskih kart. Če tolerirate reklame in uporabljate OpenAndroMaps karte potem je tudi Locus brezplačen. </p>
+
+<h3>Mesečna naročnina</h3>
+<p>Outdooractive. Zakaj ne Bergfex? Ker je vsebinsko (kartografsko) narejen za Avstrijo. Outdooractive dobite za 30€ letno in imate čudovit načrtovalnik poti. Nimate pa svobode dodajanja lastnih kart ampak roko na srce - za naročnino se pričakuje tudi "out-of-the-box" rešitev.</p>
+
+<p>Sam imam v lasti Orux, Locus (s PZS kartami) in Outdooractive, ker so mi vse tri aplikacije všeč. Ni boljšega kot iskanje novih idej in ogled vseh lastnosti poti na enem mestu. No, obstajajo tudi tiskani vodniki, ki so še vedno čudovito darilo. P.S. na terenu je 99,9% časa v uporabi Orux.</p>
+<br>
+<br>
+<h1>Namestitev OruxMaps/Locus</h1>
 <p><b>Google Play trgovina</b></p>
 <p>Po krivici se ga drži prekletstvo "težavne" namestitve, saj je na voljo v <a href="https://play.google.com/store/apps/details?id=com.orux.oruxmapsDonate">Google Play trgovini</a> in stane 4.29€. To je to. Namestitev z enim klikom. Z nakupom podpremo avtorja aplikacije. <br>Locus je v Google Play na voljo brezplačno (a prikazuje reklame) ali v <a href="https://play.google.com/store/apps/details?id=menion.android.locus.pro">plačljivi verziji</a> za 7.89€ (ter nakupi zemljevidov v aplikaciji).
 </p>
@@ -161,9 +215,6 @@ Več o uporabljeni simbologiji Elevate 4 je dosegljivo v <a href="https://www.op
 <p>Topografska zbirka kart, ki jo (še vedno) vzdržuje Geodetska uprava Republike Slovenije (na voljo tudi v Avenzi). Posamezni listi, ki so kot odprti podatki na voljo na njihovi spletni strani so združeni v mbtiles formatu za celotno območje države v <a href="https://onedrive.live.com/download?cid=937E3238A29CB656&resid=937E3238A29CB656%2142549&authkey=AIxmrZ7xWTxx2ms">mojem oblaku</a>.</p>
 
 
-
-
-
 <p>Datoteko (3.5gb) shranite v mapo Oruxmaps/mapfiles/ ter osvežite seznam kart brez povezave. Veselo uporabo.</p>
 
 <h2>Skenirane karte</h2>
@@ -172,61 +223,14 @@ Več o uporabljeni simbologiji Elevate 4 je dosegljivo v <a href="https://www.op
 
 <p>Opomba: zgolj za namene predstavitve. Avtor je <a href="https://sidarta.si/en/product/bohinj-125-000_en/">izdelek kupil </a>v papirnati obliki v uradni trgovini založnika. Sidarta na žalost še ne trži lastnih digitalnih izdelkov.</p>
 
-<br>
-<h1>Primerjava</h1>
-<h3>maPZS</h3>
-<p>PZS poleg kart nudi tudi spletni pregledovalnik, ki ga lahko shranimo na telefon ter prenašamo zemljevide brez povezave. Podlaga je skromnejša (ter derivat OSM), sloj planinskih poti je mestoma zelo splošen.</p>
-<img src="slike\mapzs.jpg" height="600">
-
-<h3>Maps.me</h3>
-<p>Še en derivat OpenStreetMap. Hiter in enostaven, resnično škoda, da vse poti prikazuje enako. Na sliki so mulatjera Zadnjica - Luknja, zahtevna pot preko Plemenic in ozka pot na Bovški Gamsovec.</p>
-<img src="slike\mapsme.jpg" height="600">
-
-<h3>Mapy.cz</h3>
-<p>Še en derivat OpenStreetMap. Hiter in enostaven, kategorizacija določenih poti ter nabor izletov in točk. Nima možnosti dodajanja kart.</p>
-<img src="slike\mapy.jpg" height="600">
-
-<h3>Tabacco</h3>
-
-<p>Ena izmed redkih kartografskih hiš z lastno aplikacijo za nakup in uporabo zgolj njihovih digitalnih kart. Za razliko od PZS prodajajo kvadrante.</p>
-<img src="slike\tabacco.jpg" height="600">
 
 
-<h3>Outdooractive, Bergfex, Komoot,...</h3>
-<p>Kaj pa Outdooractive in ostali načrtovalniki? Trenutno je verjetno najbolj priročna plačljiva aplikacija za načrtovanje aktivnosti (30€ na leto je nuja za offline zemljevide). Njihova karta je derivat iz OpenStreetMap podatkov, kar pomeni, da imamo v Oruxu iste podatke - zastonj. Njihov plan temelji na načrtovanju (višinski profili, izračun poti med točko A in B), itd. Za 60€ letno vam nudijo še dostop do kart planinskih organizacij OAV, DAV, KOMPASS, ADFC, Harvey ampak ne PZS. Bergfex? Že ime Bergfex karte "Bergfex OSM" pove, da gre za isto stvar kot v oruxu/locusu. Bergfex v zastonjski različici prikazuje tudi topografske karte Avstrije ter nudi prenos izbranih območij. 
-Seveda je paradni konj vseh aplikacij njihova galerija izletov in tur. </p>
 
-<img src="slike\outdoor1.jpg" height="600">
-
-<p>Outdooractive in podobni so z leti res dobro razvili sistem načrtovanja aktivnosti. Da se razume - so odlične aplikacije in preproste za uporabo ter dokaz, da so osnova digitalne revolucije podatki. Vsi uporabljajo isti vir ter izkušnjo gradijo na drugih funkcionalnostih. S kartografskega vidika so jim ostale aplikacije povsem konkurenčne.</p>
-<img src="slike\bergfex.jpg" height="600">
-
-<p>"Težava" teh aplikacij je globalno ali regionalno tržišče - opisov v slovenščini je malo. Nizozemec, ki je prispeval svojo turo v aplikacijo je opis napisal v svojem jeziku, lokalne turistične organizacije praviloma pišejo v angleščini ali nemščini.</p>
-
-<h3>Načrtovanje doma</h3>
-<p>Načrtovanje ture praviloma naredimo doma - brez težav lahko uporabimo spletni portal Outdooractive, analiziramo in načrtujemo pot, vidimo višinski profil poti, ... prav tako lahko brezplačno pregledujemo ture v zgoraj omenjenih aplikacijah. </p>
-<img src="slike\outdoor.jpg" height="600">
-<p>Višinski profil poti prikazuje tudi podatek o podlagi - ali je steza, pot, tlakovana, itd...vir vseh teh atributov je vestno delo tisočih prostovoljev, ki urejajo OSM.</p>
-<br>
-<p>Velika prednost Slovenije je spletna stran Hribi.net, kjer brezplačno domujejo opisi poti, slike in trase. Sicer ni vsega in se zdi, da je stran včasih zamrla ampak po popularnosti so med slovenskimi planinci verjetno na prvem mestu. Samostojno imamo tako na razpolago razmeroma bogato zbirko informacij brez, da bi se rabili <b>zavezati določeni aplikaciji.</b></p>
-
-<h1>Končna odločitev?</h1>
-<p>Kot vedno je odločitev lažja, če ji pripišemo cenik. Vse tri vam bodo enako kvalitetno služile pri orientaciji v naravi, pričakovano bo najdražja imela še tisti ekstra fancy dodatek brez katerega lahko brez težav živimo.</p>
-
-<h3>Popolnoma brezplačno</h3>
-<p>Orux. Brez konkurence. V primeru, da želite zgolj prikaz lokacije, ga uporabljati za službene naloge, vanj umestiti lastne karte, prikazovati SHP, imeti spletne karte WMS, itd...Kot rečeno. Brez konkurence.</p>
-
-<h3>Enkratni nakup</h3>
-<p>Locus. Zaradi trgovine kart. Mogoče celo Avenza (sploh, če imate IOS) vendar ne podpira vektorskih kart. Če tolerirate reklame in uporabljate OpenAndroMaps karte potem je tudi Locus brezplačen. </p>
-
-<h3>Mesečna naročnina</h3>
-<p>Outdooractive. Zakaj ne Bergfex? Ker je vsebinsko (kartografsko) narejen za Avstrijo. Outdooractive dobite za 30€ letno in imate čudovit načrtovalnik poti. Nimate pa svobode dodajanja lastnih kart ampak roko na srce - za naročnino se pričakuje tudi "out-of-the-box" rešitev.</p>
-
-<p>Sam imam v lasti Orux, Locus (s PZS kartami) in Outdooractive, ker so mi vse tri aplikacije všeč. Ni boljšega kot iskanje novih idej in ogled vseh lastnosti poti na enem mestu. No, obstajajo tudi tiskani vodniki, ki so še vedno čudovito darilo. P.S. na terenu je 99,9% časa v uporabi Orux.</p>
 
 <h1>Imena vrhov?</h1>
 <p>Najljubša je (plačljiva) aplikacija Peak finder <a href="https://www.peakfinder.org/en/mobile">LINK</a>. Sicer tudi Outdooractive nudi enako funkcijo prepoznavanje vrhov.</p>
 <img src="slike\peakfinder.jpg" height="600">
+
 
 
 <br>
