--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@ Seveda je paradni konj vseh aplikacij njihova galerija izletov in tur. </p>
 <h3>Mesečna naročnina</h3>
 <p>Outdooractive. Zakaj ne Bergfex? Ker je vsebinsko (kartografsko) narejen za Avstrijo. Outdooractive dobite za 30€ letno in imate čudovit načrtovalnik poti. Nimate pa svobode dodajanja lastnih kart ampak roko na srce - za naročnino se pričakuje tudi "out-of-the-box" rešitev.</p>
 
-<p>Sam imam v lasti Orux, Locus (s PZS kartami) in Outdooractive, ker so mi vse tri aplikacije všeč. Ni boljšega kot iskanje novih idej in ogled vseh lastnosti poti na enem mestu. No, obstajajo tudi tiskani vodniki, ki so še vedno čudovito darilo. P.S. na terenu je 99,9% časa v uporabi Orux.</p>
+<p>Sam imam v lasti vse tri, saj so mi vse tri aplikacije uporabne in rad brskam po njih. No, obstajajo tudi tiskani vodniki, ki so še vedno čudovito darilo. P.S. na terenu je 99,9% časa v uporabi Orux.</p>
 <br>
 <br>
 <h1>Namestitev OruxMaps/Locus</h1>
 <p><b>Google Play trgovina</b></p>
-<p>Po krivici se ga drži prekletstvo "težavne" namestitve, saj je na voljo v <a href="https://play.google.com/store/apps/details?id=com.orux.oruxmapsDonate">Google Play trgovini</a> in stane 4.29€. To je to. Namestitev z enim klikom. Z nakupom podpremo avtorja aplikacije. <br>Locus je v Google Play na voljo brezplačno (a prikazuje reklame) ali v <a href="https://play.google.com/store/apps/details?id=menion.android.locus.pro">plačljivi verziji</a> za 7.89€ (ter nakupi zemljevidov v aplikaciji).
+<p>Po krivici se ga drži prekletstvo "težavne" namestitve - na voljo je v <a href="https://play.google.com/store/apps/details?id=com.orux.oruxmapsDonate">Google Play trgovini</a> in stane 4.29€. To je to. Namestitev z enim klikom. Z nakupom podpremo avtorja aplikacije. <br>Locus je v Google Play na voljo brezplačno (a prikazuje reklame) ali v <a href="https://play.google.com/store/apps/details?id=menion.android.locus.pro">plačljivi verziji</a> za 7.89€ (ter nakupi zemljevidov v aplikaciji).
 </p>
 
 <p><b>Brezplačna namestitev</b></p>
